# decenterai-demo.streamlit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-ml.txt  requirements-poetry.txt  test_app.py
archived/: environment.yml
config/: __init__.py  constants.py  log.py  test_log.py
docs/dinesh/: 1_install_ml_deps.md
enums/: app_v3.py  model_trainer.py
models/: model.py
pages/: 100_📈_Plotting_Demo.py  1_v1.py  2_v2.py
prompts/: clarifai-validate-python.txt
public/: __init__.py  buttons.css  report-request-feature-buttons.html
samples/: logistic-regression.py
samples/sample_v2/: linear-regression.py
samples/sample_v3/: linear-regression.ipynb  stderr
samples/sample_v3_1/: linear-regression.py
samples/vehicle_solution/: vehicle-dataset.ipynb
spec/: v1.txt
static/: _style.css  home.html  index.css  redirect.html
utils/: __init__.py  archive.py  exec_commands.py  format_display_code.py  helper_find.py  install_deps.py  test_archive.py
utils/inputs/: css.py  html.py
utils/outputs/: text_to_speech.py
views/: __init__.py  config_pages.py  head.py  train.py
